# kekaccount

./: .gitignore  Cargo.toml  README.md  default.env  dev.sh
docs/: INDEX.md  PERMISSIONS.md  SETUP.md  SETUP_CLEANER.md  SETUP_DATABASE.md
frontend/: .gitignore  package-lock.json  package.json  svelte.config.js  tsconfig.json
frontend/src/: api.ts  app.html  checker.ts  config.ts  hooks.js  hooks.ts
frontend/src/components/: category.svelte  error.svelte  footer.svelte  link.svelte  loader.svelte  navbar.svelte  perms.svelte  setting.svelte  translate.svelte
frontend/src/components/button/: loading.svelte
frontend/src/components/error/: api.svelte
frontend/src/components/table/: tokens.svelte  users.svelte
frontend/src/lib/: actions.ts  api.ts  checker.ts  client.ts  config.ts  lang.ts  store.ts  themes.ts  upload.ts
frontend/src/routes/: __error.svelte  __layout.svelte  confirm.svelte  email_sent.svelte  index.svelte  login.svelte  logout.svelte  register.svelte  users.svelte  verify.svelte
frontend/src/routes/dash/: __layout.svelte  account.svelte  (+3 more)
frontend/src/themes/: default.css
frontend/static/lang/: de.json  en_uk.json  en_us.json
frontend/static/themes/: base.css  dark.css  light.css
migrations/2022-03-11-083936_kekaccount/: down.sql  up.sql
src/: colors.rs  main.rs  schema.rs
src/api/: db_clean.rs  http.rs  mod.rs  smtp.rs  tcp.rs
src/errors/: actix.rs
src/models/: access_code.rs  app.rs  app_token.rs  mod.rs  token.rs  user.rs  verification.rs
src/routes/api/: mod.rs
src/util/: checker.rs  hex.rs  mod.rs  random.rs
(+38 files in other folders)
